--- a/rosplan_knowledge_base/CMakeLists.txt
+++ b/rosplan_knowledge_base/CMakeLists.txt
@@ -96,3 +96,17 @@ target_link_libraries(knowledgeBase ${catkin_LIBRARIES})
 ##########
 
 # please do not use add_rosttest_gtest (seems to be interfering with qtcreator and cmake)
+
+#############
+## Install ##
+#############
+
+install(TARGETS knowledgeBase 
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
+
+install(DIRECTORY launch
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
