--- a/rosplan_interface_mapping/CMakeLists.txt
+++ b/rosplan_interface_mapping/CMakeLists.txt
@@ -82,3 +82,8 @@ install(TARGETS rproadmapServer rpsimplemapServer
 install(DIRECTORY launch
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
+
+install(DIRECTORY include/${PROJECT_NAME}/
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+  PATTERN ".svn" EXCLUDE
+)
