--- a/rosplan_knowledge_base/CMakeLists.txt
+++ b/rosplan_knowledge_base/CMakeLists.txt
@@ -110,3 +110,8 @@ install(TARGETS knowledgeBase
 install(DIRECTORY launch
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
+
+install(DIRECTORY include/${PROJECT_NAME}/
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+  PATTERN ".svn" EXCLUDE
+)
